Deliver - Similar events - Lng and Lat location - Event modification
